--- a/apps/users/project.json
+++ b/apps/users/project.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/api-gateway/src",
+  "sourceRoot": "apps/users/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -9,12 +9,12 @@
         "{options.outputPath}"
       ],
       "options": {
-        "outputPath": "dist/apps/api-gateway",
-        "main": "apps/api-gateway/src/main.ts",
-        "tsConfig": "apps/api-gateway/tsconfig.app.json",
+        "outputPath": "dist/apps/users",
+        "main": "apps/users/src/main.ts",
+        "tsConfig": "apps/users/tsconfig.app.json",
         "assets": [
-          "apps/api-gateway/src/assets",
-          "apps/api-gateway/src/environments"
+          "apps/users/src/assets",
+          "apps/users/src/environments"
         ]
       },
       "configurations": {
@@ -28,11 +28,11 @@
     "serve": {
       "executor": "@nrwl/node:node",
       "options": {
-        "buildTarget": "api-gateway:build"
+        "buildTarget": "users:build"
       },
       "configurations": {
         "production": {
-          "buildTarget": "api-gateway:build:production"
+          "buildTarget": "users:build:production"
         }
       }
     },
@@ -43,17 +43,17 @@
       ],
       "options": {
         "lintFilePatterns": [
-          "apps/api-gateway/**/*.ts"
+          "apps/users/**/*.ts"
         ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": [
-        "coverage/apps/api-gateway"
+        "coverage/apps/users"
       ],
       "options": {
-        "jestConfig": "apps/api-gateway/jest.config.ts",
+        "jestConfig": "apps/users/jest.config.ts",
         "passWithNoTests": true
       }
     }
