--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "nestjs-microservice-monorepo-boilerplate",
+  "name": "app",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "start:all": "npx nx run-many --all --target=serve --parallel --maxParallel=2",
+    "start:api-gateway": "npx nx serve api-gateway",
+    "start:users": "npx nx serve users"
   },
   "private": true,
   "dependencies": {
+    "@dev.edmardiaz/microservices": "^0.0.2",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.0.11",
     "@nestjs/platform-express": "^9.0.0",
+    "amqp-connection-manager": "^4.1.6",
+    "amqplib": "^0.10.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "i": "^0.3.7",
+    "joi": "^17.6.0",
+    "npm": "^8.19.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
@@ -23,7 +36,7 @@
     "@nrwl/eslint-plugin-nx": "14.7.2",
     "@nrwl/jest": "14.7.2",
     "@nrwl/linter": "14.7.2",
-    "@nrwl/nest": "14.7.2",
+    "@nrwl/nest": "^14.7.2",
     "@nrwl/node": "14.7.2",
     "@nrwl/workspace": "14.7.2",
     "@types/jest": "28.1.1",
