--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@app/common": ["libs/common/src/index.ts"],
+      "@app/microservices": ["libs/microservices/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
