persistence lib with user sample

--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
+    "typeorm": "ts-node -r tsconfig-paths/register -P ./libs/persistence/tsconfig.lib.json ./node_modules/typeorm/cli.js",
+    "migration:up": "npm run typeorm migration:run -- -d ./libs/persistence/typeorm.config.ts",
+    "migration:generate": "npm run typeorm -- -d ./libs/persistence/typeorm.config.ts migration:generate ./libs/persistence/migrations/migration",
+    "migration:create": "npm run typeorm -- migration:create ./libs/persistence/migrations/migration",
+    "migration:down": "npm run typeorm -- -d ./libs/persistence/typeorm.config.ts migration:revert",
+    "schema:drop": "npm run typeorm -- -d ./libs/persistence/typeorm.config.ts schema:drop",
+    "seed": "ts-node -r tsconfig-paths/register -P ./libs/persistence/tsconfig.lib.json ./libs/persistence/seeders/run-seed.ts",
+    "db:reset:seed": "npm run schema:drop && npm run migration:up && npm run seed",
     "start:all": "npx nx run-many --all --target=serve --parallel --maxParallel=2",
     "start:api-gateway": "npx nx serve api-gateway",
     "start:users": "npx nx serve users"
@@ -18,16 +26,22 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.0.11",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.2",
+    "@nestjs/typeorm": "^9.0.1",
     "amqp-connection-manager": "^4.1.6",
     "amqplib": "^0.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "i": "^0.3.7",
     "joi": "^17.6.0",
+    "mysql2": "^2.3.3",
     "npm": "^8.19.1",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.9",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
